# pointcloud_to_laserscan

./: CMakeLists.txt  package.xml
cfg/: slicer.cfg
launch/: carma_node.launch  dual_carma_node.launch  health_robot_rgbd_to_scan.launch  vega_node.launch
src/: pointcloud_to_laserscan_nodelet.cpp  pointcloud_to_laserscan_tom.cpp
